[project]
name = "hbg-typesense-mcp"
version = "0.1.0"
description = "Minimal MCP server implementation for basic search in Typesense."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.28.1",
    "mcp[cli]>=1.26.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "typesense>=2.0.0",
]
